# armilar-data-pipeline

./: .gitignore  BANGLADESH_SOURCE_AUDIT_V0.6.11.md  CHANGELOG.md  CHINA_SOURCE_AUDIT_V0.6.5.json  CHINA_SOURCE_AUDIT_V0.6.5.md  CODEX_OVERNIGHT_REPORT.md  DELIVERY_REPORT_V0.2.0.md  DELIVERY_REPORT_V0.3.0.md  DELIVERY_REPORT_V0.3.1.md  DELIVERY_REPORT_V0.4.0.md  EGYPT_SOURCE_AUDIT_V0.6.8.md  FINAL_REPORT_V0.6.1.md  FINAL_REPORT_V0.6.13.md  FINAL_REPORT_V0.6.2.md  FINAL_REPORT_V0.6.3.md  FINAL_REPORT_V0.6.4.md  FINAL_REPORT_V0.6.5.md  INCIDENT_REPORT_RUN_28336070795.md  INDIA_SOURCE_AUDIT_V0.6.3.json  INDIA_SOURCE_AUDIT_V0.6.3.md  LICENSE  MANIFEST.sha256  MANIFEST_V0.6.2.sha256  MANIFEST_V0.6.4.sha256  METHODOLOGY_DECISION_REQUIRED.md  NEXT_ACTIONS.md  NIGERIA_SOURCE_AUDIT_V0.6.10.md  PACKAGE_AUDIT_V0.2.0.json  PACKAGE_AUDIT_V0.3.0.json  PACKAGE_AUDIT_V0.3.1.json  PACKAGE_AUDIT_V0.4.0.json  PAKISTAN_SOURCE_AUDIT_V0.6.9.md  PATCH_README.md  README.md  REAL_RUN_REPLAY_VALIDATION_V0.3.1.txt  REAL_RUN_REPLAY_VALIDATION_V0.4.0.txt  REAL_SOURCE_PARSER_VALIDATION_V0.3.0.txt  REAL_SOURCE_PARSER_VALIDATION_V0.3.1.txt  RELEASE_NOTES_V0.2.0.md  RELEASE_NOTES_V0.3.0.md  (+61 more)
artifacts-v071-verify/: latest_run_summary.json
basket/: ARMILAR_RESEARCH_CORE_V1.csv
config/: armilar_categories.csv  armilar_consumption_classification_v1.json  backtest_v088.json  backtest_v090.json  component_registry.yaml  country_name_aliases.csv  development_contracts.json  eurostat_headline_v090.json  eurostat_pilot_policy.json  eurostat_vertical_v087.json  external_economy_codes.csv  first_published_v093.json  fx_currency_registry.csv  fx_methodology_v083.json  global_release_gates.json  global_weight_policy.json  icp_headings_to_armilar.csv  imputation_policy.json  information_set_v093.json  methodology_policy.json  paired_diagnostics_v091.json  pre_release_backtest_v094.json  price_completion_policy_v084.json  price_sources_pilot.json  price_validation_gates_v085.json  proxy_ppp_benchmarks.csv  publication_scope_rules.csv  release_time_backtest_v093.json  source_probe_candidates.csv  source_registry.csv  sources.json  step2_icp2021.json  temporal_safeguard_v092.json
constitution/: AMENDMENT_1_1_ICP_ACTUAL_CONSUMPTION_PROXY_RATIFIED.md  AMENDMENT_2_GLOBAL_COVERAGE_AND_UNCERTAINTY.md  AMENDMENT_3_CANONICAL_CONSUMPTION_CLASSIFICATION.md  ARMILAR_RESEARCH_CORE_V1.json  ARMILAR_RESEARCH_CORE_V1.md  ARMILAR_RESEARCH_CORE_V1.sha256
docs/: ARCHITECTURE.md  ARMILAR_RESEARCH_CORE_V1_SCOPE.md  BACKTEST_V088.md  BUILD_VS_REUSE_DECISIONS.md  CANONICAL_CONSUMPTION_CLASSIFICATION.md  CI_EXECUTION_POLICY.md  DECISION_LOG.md  DECISION_RESEARCH_CORE_V1.md  DECISION_V087_EUROSTAT_TRANSPORT.md  DECISION_V088_FINAL_VINTAGE_LIMITATION.md  DEVELOPMENT_CONTRACT_STANDARD.md  EUROSTAT_VERTICAL_V087.md  FX_METHODOLOGY_V0.8.3.md  GLOBAL_RELEASE_GATES_V0.7.3.md  IMPLEMENTATION_PLAN_V0.7_TO_V1.0.md  IMPUTATION_BASELINES_V0.7.2.md  MONTHLY_PRICE_REGISTRY_V0.8.0.md  OPEN_SOURCE_REUSE_AUDIT.md  PRICE_COMPLETION_METHODOLOGY_V0.8.4.md  PRICE_MODEL_VALIDATION_V0.8.5.md  ROADMAP_V0.8.6_TO_V1.0.md  ROADMAP_V095_TO_V110.md  SDMX_CLIENT_SPIKE_V0.8.6.md  SOURCE_AUDIT.md  STEP2H0_SOURCE_AUDIT.md  STEP2I_AUDIT_STATES.md  V090_CP00_VERTICAL_CONTRACT.md  V091_PAIRED_DIAGNOSTICS_CONTRACT.md  V092_TEMPORAL_SAFEGUARD_CONTRACT.md  V093_INFORMATION_SET_CONTRACT.md  V094_PRE_RELEASE_FORECAST_CONTRACT.md
examples/: aggregate_constraints.sample.csv  (+6 more)
(+531 files in other folders)
