[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "armilar-data-pipeline"
version = "0.2.0"
description = "Auditable acquisition and construction pipeline for the ICP 2021 Armilar weight matrix"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Armilar Project"}]
dependencies = []

[project.scripts]
armilar-data = "armilar_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
