[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "armilar-data-pipeline"
version = "0.9.3"
description = "Auditable acquisition and construction pipeline for the ICP 2021 Armilar weight matrix"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Armilar Project"}]
dependencies = []

[project.optional-dependencies]
sdmx = ["sdmx1>=2.26,<3"]
test = ["hypothesis>=6.100,<7", "pytest>=8,<9"]

[project.scripts]
armilar-information-set-v093 = "armilar_prices.information_set_v093:main"
armilar-first-published-v093 = "armilar_prices.first_published_v093:main"
armilar-release-time-backtest-v093 = "armilar_prices.release_time_backtest_v093:main"
armilar-vintage-sensitivity-v093 = "armilar_prices.vintage_sensitivity_v093:main"
armilar-temporal-safeguard-v092 = "armilar_prices.temporal_safeguard_v092:main"
armilar-paired-diagnostics-v091 = "armilar_prices.paired_diagnostics_v091:main"
armilar-eurostat-headline = "armilar_prices.eurostat_headline_v090:main"
armilar-backtest-v090 = "armilar_prices.backtest_v090:main"
armilar-data = "armilar_pipeline.cli:main"
armilar-source-probe = "armilar_source_probe.cli:main"
armilar-proxy-audit = "armilar_proxy_audit.cli:main"
armilar-country = "armilar_country_adapters.cli:main"
armilar-matrix = "armilar_matrix_builder.cli:main"
armilar-global-weights = "armilar_global_weights.cli:main"
armilar-imputation = "armilar_global_weights.imputation_cli:main"
armilar-global-release = "armilar_global_weights.release_cli:main"
armilar-prices = "armilar_prices.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
